added lightgbm training pipeline

--- a/.gitignore
+++ b/.gitignore
@@ -179,3 +179,93 @@ data_clean/Latest Gold/market/labels/spx500_labels_120min.parquet
 notebooks/AR_test/sp500_prediction_20251102_233914/ar_ols_30min_20251102_235743_features.json
 notebooks/AR_test/sp500_prediction_20251102_233914/ar_ols_30min_20251102_235743_metrics.json
 notebooks/AR_test/sp500_prediction_20251102_233914/sp500_prediction/predictions_vs_actuals.png
+notebooks/lgb_test/sp500_prediction_20251103_220447/hyperparameters/shap_feature_importance.png
+notebooks/lgb_test/sp500_prediction_20251103_220447/hyperparameters/shap_summary.json
+notebooks/lgb_test/sp500_prediction_20251103_220447/hyperparameters/stage1_summary.json
+notebooks/lgb_test/sp500_prediction_20251103_220447/hyperparameters/stage2_summary.json
+notebooks/lgb_test/sp500_prediction_20251103_220700/xgboost_regression_30min_20251103_220756_features.json
+notebooks/lgb_test/sp500_prediction_20251103_220700/xgboost_regression_30min_20251103_220756_metrics.json
+notebooks/lgb_test/sp500_prediction_20251103_220700/hyperparameters/shap_feature_importance.png
+notebooks/lgb_test/sp500_prediction_20251103_220700/hyperparameters/shap_summary.json
+notebooks/lgb_test/sp500_prediction_20251103_220700/hyperparameters/stage1_summary.json
+notebooks/lgb_test/sp500_prediction_20251103_220700/hyperparameters/stage2_summary.json
+notebooks/lgb_test/sp500_prediction_20251103_220700/sp500_prediction/predictions_vs_actuals.png
+notebooks/lgb_test/sp500_prediction_20251103_220851/xgboost_regression_30min_20251103_220933_features.json
+notebooks/lgb_test/sp500_prediction_20251103_220851/xgboost_regression_30min_20251103_220933_metrics.json
+notebooks/lgb_test/sp500_prediction_20251103_220851/hyperparameters/shap_feature_importance.png
+notebooks/lgb_test/sp500_prediction_20251103_220851/hyperparameters/shap_summary.json
+notebooks/lgb_test/sp500_prediction_20251103_220851/hyperparameters/stage1_summary.json
+notebooks/lgb_test/sp500_prediction_20251103_220851/hyperparameters/stage2_summary.json
+notebooks/lgb_test/sp500_prediction_20251103_220851/sp500_prediction/predictions_vs_actuals.png
+notebooks/lgb_test/sp500_prediction_20251103_221038/xgboost_regression_30min_20251103_221124_features.json
+notebooks/lgb_test/sp500_prediction_20251103_221038/xgboost_regression_30min_20251103_221124_metrics.json
+notebooks/lgb_test/sp500_prediction_20251103_221038/hyperparameters/shap_feature_importance.png
+notebooks/lgb_test/sp500_prediction_20251103_221038/hyperparameters/shap_summary.json
+notebooks/lgb_test/sp500_prediction_20251103_221038/hyperparameters/stage1_summary.json
+notebooks/lgb_test/sp500_prediction_20251103_221038/hyperparameters/stage2_summary.json
+notebooks/lgb_test/sp500_prediction_20251103_221038/sp500_prediction/predictions_vs_actuals.png
+notebooks/lgb_test/sp500_prediction_20251103_221351/xgboost_regression_30min_20251103_221439_features.json
+notebooks/lgb_test/sp500_prediction_20251103_221351/xgboost_regression_30min_20251103_221439_metrics.json
+notebooks/lgb_test/sp500_prediction_20251103_221351/hyperparameters/shap_feature_importance.png
+notebooks/lgb_test/sp500_prediction_20251103_221351/hyperparameters/shap_summary.json
+notebooks/lgb_test/sp500_prediction_20251103_221351/hyperparameters/stage1_summary.json
+notebooks/lgb_test/sp500_prediction_20251103_221351/hyperparameters/stage2_summary.json
+notebooks/lgb_test/sp500_prediction_20251103_221351/sp500_prediction/predictions_vs_actuals.png
+notebooks/lgb_test/sp500_prediction_20251103_221646/lightgbm_regression_30min_20251103_221745_features.json
+notebooks/lgb_test/sp500_prediction_20251103_221646/lightgbm_regression_30min_20251103_221745_metrics.json
+notebooks/lgb_test/sp500_prediction_20251103_221646/hyperparameters/shap_feature_importance.png
+notebooks/lgb_test/sp500_prediction_20251103_221646/hyperparameters/shap_summary.json
+notebooks/lgb_test/sp500_prediction_20251103_221646/hyperparameters/stage1_summary.json
+notebooks/lgb_test/sp500_prediction_20251103_221646/hyperparameters/stage2_summary.json
+notebooks/lgb_test/sp500_prediction_20251103_221646/sp500_prediction/predictions_vs_actuals.png
+notebooks/xgb_test/sp500_prediction_20251102_181330_full/xgboost_regression_30min_20251102_205528_features.json
+notebooks/xgb_test/sp500_prediction_20251102_181330_full/xgboost_regression_30min_20251102_205528_metrics.json
+notebooks/xgb_test/sp500_prediction_20251102_181330_full/hyperparameters/shap_feature_importance.png
+notebooks/xgb_test/sp500_prediction_20251102_181330_full/hyperparameters/shap_summary.json
+notebooks/xgb_test/sp500_prediction_20251102_181330_full/hyperparameters/stage1_summary.json
+notebooks/xgb_test/sp500_prediction_20251102_181330_full/hyperparameters/stage2_summary.json
+notebooks/xgb_test/sp500_prediction_20251102_181330_full/sp500_prediction/predictions_vs_actuals.png
+notebooks/xgb_test/sp500_prediction_20251103_004618/hyperparameters/shap_feature_importance.png
+notebooks/xgb_test/sp500_prediction_20251103_004618/hyperparameters/shap_summary.json
+notebooks/xgb_test/sp500_prediction_20251103_004618/hyperparameters/stage1_summary.json
+notebooks/xgb_test/sp500_prediction_20251103_005009/xgboost_regression_30min_20251103_005218_features.json
+notebooks/xgb_test/sp500_prediction_20251103_005009/xgboost_regression_30min_20251103_005218_metrics.json
+notebooks/xgb_test/sp500_prediction_20251103_005009/hyperparameters/shap_feature_importance.png
+notebooks/xgb_test/sp500_prediction_20251103_005009/hyperparameters/shap_summary.json
+notebooks/xgb_test/sp500_prediction_20251103_005009/hyperparameters/stage1_summary.json
+notebooks/xgb_test/sp500_prediction_20251103_005009/hyperparameters/stage2_summary.json
+notebooks/xgb_test/sp500_prediction_20251103_005009/sp500_prediction/predictions_vs_actuals.png
+notebooks/xgb_test/sp500_prediction_20251103_005930/xgboost_regression_30min_20251103_010131_features.json
+notebooks/xgb_test/sp500_prediction_20251103_005930/xgboost_regression_30min_20251103_010131_metrics.json
+notebooks/xgb_test/sp500_prediction_20251103_005930/hyperparameters/shap_feature_importance.png
+notebooks/xgb_test/sp500_prediction_20251103_005930/hyperparameters/shap_summary.json
+notebooks/xgb_test/sp500_prediction_20251103_005930/hyperparameters/stage1_summary.json
+notebooks/xgb_test/sp500_prediction_20251103_005930/hyperparameters/stage2_summary.json
+notebooks/xgb_test/sp500_prediction_20251103_005930/sp500_prediction/predictions_vs_actuals.png
+notebooks/xgb_test/sp500_prediction_20251103_010317/xgboost_regression_30min_20251103_010546_features.json
+notebooks/xgb_test/sp500_prediction_20251103_010317/xgboost_regression_30min_20251103_010546_metrics.json
+notebooks/xgb_test/sp500_prediction_20251103_010317/hyperparameters/shap_feature_importance.png
+notebooks/xgb_test/sp500_prediction_20251103_010317/hyperparameters/shap_summary.json
+notebooks/xgb_test/sp500_prediction_20251103_010317/hyperparameters/stage1_summary.json
+notebooks/xgb_test/sp500_prediction_20251103_010317/hyperparameters/stage2_summary.json
+notebooks/xgb_test/sp500_prediction_20251103_010317/sp500_prediction/predictions_vs_actuals.png
+notebooks/xgb_test/sp500_prediction_20251103_011221/xgboost_regression_30min_20251103_033834_features.json
+notebooks/xgb_test/sp500_prediction_20251103_011221/xgboost_regression_30min_20251103_033834_metrics.json
+notebooks/xgb_test/sp500_prediction_20251103_011221/hyperparameters/shap_feature_importance.png
+notebooks/xgb_test/sp500_prediction_20251103_011221/hyperparameters/shap_summary.json
+notebooks/xgb_test/sp500_prediction_20251103_011221/hyperparameters/stage1_summary.json
+notebooks/xgb_test/sp500_prediction_20251103_011221/hyperparameters/stage2_summary.json
+notebooks/xgb_test/sp500_prediction_20251103_011221/sp500_prediction/predictions_vs_actuals.png
+notebooks/xgb_test/sp500_prediction_20251103_074708/xgboost_regression_30min_20251103_101438_features.json
+notebooks/xgb_test/sp500_prediction_20251103_074708/xgboost_regression_30min_20251103_101438_metrics.json
+notebooks/xgb_test/sp500_prediction_20251103_074708/xgboost_regression_30min_20251103_124213_features.json
+notebooks/xgb_test/sp500_prediction_20251103_074708/xgboost_regression_30min_20251103_124213_metrics.json
+notebooks/xgb_test/sp500_prediction_20251103_074708/xgboost_regression_30min_20251103_151033_features.json
+notebooks/xgb_test/sp500_prediction_20251103_074708/xgboost_regression_30min_20251103_151033_metrics.json
+notebooks/xgb_test/sp500_prediction_20251103_074708/hyperparameters/shap_feature_importance.png
+notebooks/xgb_test/sp500_prediction_20251103_074708/hyperparameters/shap_summary.json
+notebooks/xgb_test/sp500_prediction_20251103_074708/hyperparameters/stage1_summary.json
+notebooks/xgb_test/sp500_prediction_20251103_074708/hyperparameters/stage2_summary.json
+notebooks/xgb_test/sp500_prediction_20251103_074708/sp500_prediction/predictions_vs_actuals.png
+notebooks/N03_hyperparameter_testing.ipynb
+notebooks/N03_hyperparameter_testing.ipynb
