--- a/requirements.txt
+++ b/requirements.txt
@@ -27,7 +27,7 @@ docker==7.1.0
 docstring_parser==0.17.0
 docutils==0.22.2
 email-validator==2.3.0
-evidently
+evidently==0.7.0
 exceptiongroup==1.3.0
 fastapi==0.119.0
 fastmcp==2.12.5
@@ -93,7 +93,7 @@ partd==1.4.2
 pathable==0.4.4
 pathspec==0.12.1
 pillow==11.3.0
-plotly==6.3.1
+plotly
 prometheus_client==0.23.1
 protobuf==6.33.0
 psutil==7.1.0
