--- a/.env.monitoring
+++ b/.env.monitoring
@@ -5,12 +5,12 @@
 # SMTP Settings
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
-SMTP_USER=linoux80@gmail.com
-SMTP_PASSWORD=oejy pweq gtqf kojq
-FROM_EMAIL=linoux80@gmail.com
+SMTP_USER=<email>
+SMTP_PASSWORD=<password>
+FROM_EMAIL=<email>
 
 # Alert Recipients (comma-separated)
-ALERT_RECIPIENTS=h.taukoor.2024@engd.smu.edu.sg
+ALERT_RECIPIENTS=<email>
 
 # Drift Detection Thresholds
 DATA_DRIFT_THRESHOLD=0.1
